[package]
name = "rusterizer"
version = "0.1.0"
authors = ["Shuoliu Yang <visysl@outlook.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
glm = "0.2.3"
sdl2="0.34"
assimp="0.3.1"
stb_image = "0.2.2"
rayon="1.5.0"
unsafe_unwrap="0.1.0"
[dependencies.gltf]
version = "0.15"

[profile.release]
debug = true
